--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body style="background-color: thistle;">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;text-align: center;">zhangrui</h1>
+<h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;text-align: center;">智媛媛</h1>
 <p style="font-family: Arial, Helvetica, sans-serif;color: rgb(205, 99, 50);font-size: 20px;"><i>是个大<del>聪明</del><ins>笨蛋</ins></i></p>
 <pre>
 z h a n g 
