--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <html>
-<body style="background-color: thistle;">
+<head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;text-align: center;">智媛媛</h1>
-<p style="font-family: Arial, Helvetica, sans-serif;color: rgb(205, 99, 50);font-size: 20px;"><i>是个大<del>聪明</del><ins>笨蛋</ins></i></p>
-<pre>
-z h a n g 
-r u i
-</pre>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Language" content="zh-cn" />
+<style type="text/css">
+h1 {color: darksalmon;font-family: Arial, Helvetica, sans-serif;text-align: left;}
+p {color:yellow;font-family: Arial, Helvetica, sans-serif;font-size: 20px;}
+</style>
+</head>
+<body style="background-color: thistle;">
+<h1>智媛媛</h1>
+<p><i>是个大<del>聪明</del><ins>笨蛋</ins></i></p>
+<address>
+Written by 章瑞<br>
+Visit me at:<br>
+Southeast University Jiulonghu Campus
+</address>
+<br>
+<a href="/Users/rebecca/Desktop/HTML/index2.html" style="text-decoration:none">
+    只有大聪明才可以点开链接！
+</a>
 </body>
 </html>
