--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p {color:yellow;font-family: Arial, Helvetica, sans-serif;font-size: 20px;}
 </style>
 </head>
 <body style="background-color: thistle;">
-<h1>智媛媛</h1>
+<h1>我的朋友</h1>
 <p><i>是个大<del>聪明</del><ins>笨蛋</ins></i></p>
 <address>
 Written by 章瑞<br>
