--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Visit me at:<br>
 Southeast University Jiulonghu Campus
 </address>
 <br>
-<a href="/index2.html" style="text-decoration:none">
+<a href="https://uncle-rui.github.io/index2.html" style="text-decoration:none">
     只有大聪明才可以点开链接！
 </a>
 </body>
