--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta http-equiv="Content-Language" content="zh-cn" />
 <style type="text/css">
-h1 {color: darksalmon;font-family: Arial, Helvetica, sans-serif;text-align: left;}
-p {color:yellow;font-family: Arial, Helvetica, sans-serif;font-size: 20px;}
+h1 {color: rgb(0, 0, 0);font-family: Arial, Helvetica, sans-serif;text-align: left;}
+p {color:rgb(0, 0, 0);font-family: Arial, Helvetica, sans-serif;font-size: 20px;}
 </style>
 </head>
-<body style="background-color: thistle;">
-<h1>我的朋友</h1>
-<p><i>是个大<del>聪明</del><ins>笨蛋</ins></i></p>
+<body style="background-color:antiquewhite;">
+<h1>Hi,I am Zhangrui!<i>A<del>gentle</del><ins>lively</ins>girl.</i><br>
+    I am a second-year graduate student of Southeast University,<br>
+    majoring in Regional Economics.Now begin to learn front end.</h1>
+<a name="Education">2016.09-2020.06</a>
+<h2 style="color: black;font-family: Arial, Helvetica, sans-serif;text-align: left;"><a href="#Education">1.Education Experience</a><br>
+2.Internship Experience<br>
+3.Project Experience<br>
+4.Personalities and Hobbies<br>
+5.Contact with me
+</h2>
+<p>2016.09-2020.06  BA,Department of Economics  Southeast University<br>
+2020.09-2023.09  MA,Applied Economics  Southeast University
+</p>
 <address>
 Written by 章瑞<br>
 Visit me at:<br>
@@ -18,7 +29,7 @@ Southeast University Jiulonghu Campus
 </address>
 <br>
 <a href="https://uncle-rui.github.io/index2.html" style="text-decoration:none">
-    只有大聪明才可以点开链接！
+    Thanks for watching!
 </a>
 </body>
 </html>
