--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 <meta http-equiv="Content-Language" content="zh-cn" />
 <style type="text/css">
 h1 {color: rgb(0, 0, 0);font-family: Arial, Helvetica, sans-serif;text-align: left;}
+h2 {color:black;font-family: Arial, Helvetica, sans-serif;text-align: left;}
 p {color:rgb(0, 0, 0);font-family: Arial, Helvetica, sans-serif;font-size: 20px;}
 </style>
 </head>
 <body style="background-color:antiquewhite;">
-<h1>Hi,I am Zhangrui!<i>A<del>gentle</del><ins>lively</ins>girl.</i><br>
+<h1>Hi,I am Zhangrui!<i>A<del> gentle </del><ins>lively </ins>girl.</i><br>
     I am a second-year graduate student of Southeast University,<br>
     majoring in Regional Economics.Now begin to learn front end.</h1>
-<a name="Education">2016.09-2020.06</a>
-<h2 style="color: black;font-family: Arial, Helvetica, sans-serif;text-align: left;"><a href="#Education">1.Education Experience</a><br>
-2.Internship Experience<br>
-3.Project Experience<br>
-4.Personalities and Hobbies<br>
-5.Contact with me
-</h2>
+<p><a href="#ecucation"ABOUT EDUCATION</a></p>
+<h2><a name="education">1.Education Experience</a></h2>
 <p>2016.09-2020.06  BA,Department of Economics  Southeast University<br>
-2020.09-2023.09  MA,Applied Economics  Southeast University
-</p>
+2020.09-2023.09  MA,Applied Economics  Southeast University</p>
+<h2>2.Internship Experience</h2>
+<h2>3.Project Experience</h2>
+<h2>4.Personalities and Hobbies</h2>
+<h2>5.Contact with me</h2>
+<p><a href="mailto:zhangrui_7418522@163.com?subject=Hello%20again">戳我！</a></p>
 <address>
 Written by 章瑞<br>
 Visit me at:<br>
