--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ p {color:rgb(0, 0, 0);font-family: Arial, Helvetica, sans-serif;font-size: 20px;
 <h1>Hi,I am Zhangrui! <i>A<del> gentle </del><ins>lively </ins>girl.</i><br>
     I am a second-year graduate student of Southeast University,<br>
     majoring in Regional Economics.Now begin to learn front end.</h1>
-<p><a href="#ecucation"ABOUT EDUCATION</a></p>
+<p><a href="#ecucation">ABOUT EDUCATION</a></p>
 <h2><a name="education">1.Education Experience</a></h2>
 <p>2016.09-2020.06  BA,Department of Economics  Southeast University<br>
 2020.09-2023.09  MA,Applied Economics  Southeast University</p>
